--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ crashlytics-build.properties
 UserSettings/HDRPUserSettings.asset
 UserSettings/HDRPUserSettings.asset
 UserSettings/HDRPUserSettings.asset
+UserSettings/Layouts/default-2021.dwlt
+UserSettings/HDRPUserSettings.asset
