--- a/Assets/MatPack/com.matlib-hdrp/package.json
+++ b/Assets/MatPack/com.matlib-hdrp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.matlib-hdrp",
-  "displayName": matlib-hdrp
+  "displayName": "matlib-hdrp",
   "author": {
     "name": "d-g"
   },
